--- a/RodNamHaiTee.ioc
+++ b/RodNamHaiTee.ioc
@@ -19,15 +19,16 @@ Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA9
-Mcu.Pin11=PA10
-Mcu.Pin12=PA13
-Mcu.Pin13=PA14
-Mcu.Pin14=PC10
-Mcu.Pin15=PB3
-Mcu.Pin16=PB8
-Mcu.Pin17=PB9
-Mcu.Pin18=VP_SYS_VS_Systick
+Mcu.Pin10=PC8
+Mcu.Pin11=PA9
+Mcu.Pin12=PA10
+Mcu.Pin13=PA13
+Mcu.Pin14=PA14
+Mcu.Pin15=PC10
+Mcu.Pin16=PB3
+Mcu.Pin17=PB8
+Mcu.Pin18=PB9
+Mcu.Pin19=VP_SYS_VS_Systick
 Mcu.Pin2=PC15-OSC32_OUT
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
@@ -36,7 +37,7 @@ Mcu.Pin6=PA3
 Mcu.Pin7=PA5
 Mcu.Pin8=PA7
 Mcu.Pin9=PC4
-Mcu.PinsNb=19
+Mcu.PinsNb=20
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
@@ -51,8 +52,8 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.SysTick_IRQn=true\:4\:0\:true\:false\:true\:true\:true
-NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true
+NVIC.USART1_IRQn=true\:0\:0\:true\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
@@ -90,7 +91,7 @@ PB8.Signal=GPIO_Output
 PB9.Locked=true
 PB9.Signal=GPIO_Output
 PC10.Locked=true
-PC10.Signal=GPIO_Output
+PC10.Signal=GPIO_Input
 PC13-ANTI_TAMP.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PC13-ANTI_TAMP.GPIO_Label=B1 [Blue PushButton]
 PC13-ANTI_TAMP.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
@@ -104,6 +105,8 @@ PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
 PC4.Locked=true
 PC4.Signal=GPIO_Output
+PC8.Locked=true
+PC8.Signal=GPIO_Output
 PH0\ -\ OSC_IN.Locked=true
 PH0\ -\ OSC_IN.Mode=HSE-External-Oscillator
 PH0\ -\ OSC_IN.Signal=RCC_OSC_IN
