--- a/RodNamHaiTee.ioc
+++ b/RodNamHaiTee.ioc
@@ -6,6 +6,7 @@ ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.master=1
 File.Version=6
+GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
@@ -19,18 +20,19 @@ Mcu.Name=STM32F411R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13-ANTI_TAMP
 Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PC8
-Mcu.Pin11=PC9
-Mcu.Pin12=PA9
-Mcu.Pin13=PA10
-Mcu.Pin14=PA13
-Mcu.Pin15=PA14
-Mcu.Pin16=PC10
-Mcu.Pin17=PB3
-Mcu.Pin18=PB8
-Mcu.Pin19=PB9
+Mcu.Pin10=PB13
+Mcu.Pin11=PC8
+Mcu.Pin12=PC9
+Mcu.Pin13=PA9
+Mcu.Pin14=PA10
+Mcu.Pin15=PA13
+Mcu.Pin16=PA14
+Mcu.Pin17=PC10
+Mcu.Pin18=PB3
+Mcu.Pin19=PB8
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=VP_SYS_VS_Systick
+Mcu.Pin20=PB9
+Mcu.Pin21=VP_SYS_VS_Systick
 Mcu.Pin3=PH0 - OSC_IN
 Mcu.Pin4=PH1 - OSC_OUT
 Mcu.Pin5=PA2
@@ -38,7 +40,7 @@ Mcu.Pin6=PA3
 Mcu.Pin7=PA5
 Mcu.Pin8=PA7
 Mcu.Pin9=PC4
-Mcu.PinsNb=21
+Mcu.PinsNb=22
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F411RETx
@@ -84,6 +86,10 @@ PA5.Signal=GPIO_Output
 PA7.Signal=ADCx_IN7
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB13.GPIOParameters=GPIO_PuPd
+PB13.GPIO_PuPd=GPIO_PULLUP
+PB13.Locked=true
+PB13.Signal=GPIO_Output
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
@@ -190,4 +196,4 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=NUCLEO-F411RE
 boardIOC=true
-isbadioc=false
+isbadioc=true
